1) Fixed bug with dark color-scheme 2) Fixed cart layout bugs

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,9 @@
   padding-left: 4vw;
   padding-right: 3vw;
 }
+@media screen and (max-width: 576px){
+  .app{
+    padding: 0;
+    margin: 0;
+  }
+}
