--- a/src/components/pages/cart/cartItem/separateCartLine/separateCartLine.module.scss
+++ b/src/components/pages/cart/cartItem/separateCartLine/separateCartLine.module.scss
@@ -1,5 +1,5 @@
 .line {
-    width: 47.1578947368vw;
+    width: 59.1578947368vw;
     height: 0.05263157894vw;
 
     margin-top: 1.57894736842vw;
