--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,23 @@ code {
   }
 }
 
+@media (prefers-color-scheme: dark) {
+  :root {
+    color: #213547;
+    background-color: #FFDF8C;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
+  input{
+    color: #213547;
+    background-color: #f9f9f9;
+  }
+}
+
 @font-face {
   font-family: "ProximaNova-Black";
   src: local("ProximaNova-Black"),
